# auto_driving_vehicle

./: .gitignore  README.md
ros2_ws/src/mpc_ctrl/: CMakeLists.txt  package.xml
ros2_ws/src/mpc_ctrl/src/: mpc_ctrl_node.cpp
scripts/: run_sim.sh
sim/gazebo/models/car_actor/: model.config  model.sdf
sim/gazebo/models/simple_car/: model.config  model.sdf
sim/gazebo/models/suv_vehicle/: model.config  model.sdf
sim/gazebo/plugins/: truck_gz_driver.py
sim/gazebo/worlds/: car_world.sdf
