<?xml version="1.0"?>
<package format="3">
  <name>mpc_ctrl</name>
  <version>0.1.0</version>
  <description>MPC controller node for autonomous driving project.</description>
  <maintainer email="noreply@example.com">auto_driving_vehicle</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
